--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,12 +39,14 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
-    "cyphertap": "link:../cyphertap",
     "@langchain/langgraph-sdk": "^0.0.36",
     "@lucide/svelte": "^0.515.0",
     "bits-ui": "^2.9.4",
     "clsx": "^2.1.1",
+    "cyphertap": "file:../cyphertap",
+    "idb": "^8.0.3",
     "mode-watcher": "^1.1.0",
+    "monaco-editor": "^0.55.1",
     "nanoid": "^5.1.5",
     "svelte-sonner": "^1.0.5",
     "tailwind-merge": "^3.3.1",
@@ -52,4 +54,3 @@
     "vaul-svelte": "1.0.0-next.7"
   }
 }
-
